# rp2040-sound-card

./: CMakeLists.txt  README.md  cdc_app.c  i2s.pio  main.c  tusb_config.h  uac2_app.c  wm8731.c  wm8731.h
lb7ug_ft8/: archive65.7z  archive7.7z  archive_v9.7z  archivev6.7z  main.c
lb7ug_ft8/hal/: adc_audio.h  oled.c  patch_full.h  si4732.c  si4732.h  si5351.c
lb7ug_ft8/lb7ug_ft8_v3/: CMakeLists.txt  README.md  common.h  config.h
lb7ug_ft8/lb7ug_ft8_v3/dsp/: goertzel.h
lb7ug_ft8/lb7ug_ft8_v3/hal/: si4732.c  si4732.h
lb7ug_ft8/lb7ug_ft8_v3/radio/: agc.c  cw_keyer.h  vfo.c  vfo.h
lb7ug_ft8/lb7ug_ft8_v3/stages/: CMakeLists_stages.txt  stage4_vfo.c
lb7ug_ft8/lb7ug_ft8_v3/ui/: menu.c
lb7ug_ft8/lb7ug_ft8_v3/usb/: cdc_app.h
lb7ug_ft8/lb7ug_ft8_v4/: CMakeLists.txt  buggy_rxtx_main.c  config.h  fmrx_main.c  main.c
lb7ug_ft8/lb7ug_ft8_v4/hal/: i2c_bus.c
lb7ug_ft8/lb7ug_ft8_v4/radio/: modes.h
lb7ug_ft8/lb7ug_ft8_v5/: BUILDING.md  main.c  tusb_config.h
lb7ug_ft8/lb7ug_ft8_v5/dsp/: goertzel.c
lb7ug_ft8/lb7ug_ft8_v5/hal/: i2c_bus.c  i2c_bus.h  si4732.c  si4732.h  si5351.c
lb7ug_ft8/lb7ug_ft8_v5/radio/: vfo.c
lb7ug_ft8/lb7ug_ft8_v5/stages/: stage3_rx.c
lb7ug_ft8/lb7ug_ft8_v5/ui/: menu.c  menu.h  terminal.c  xmenu.c
lb7ug_ft8/lb7ug_ft8_v5/usb/: cdc_app.c  uac2_app.h
lb7ug_ft8/lb7ug_ft8_v6/: CMakeLists.txt  archive.7z
lb7ug_ft8/lb7ug_ft8_v6/dsp/: goertzel.c  ssb_mod.c  ssb_mod.h
lb7ug_ft8/lb7ug_ft8_v6/hal/: adc_audio.c  oled.h  si5351.h
lb7ug_ft8/lb7ug_ft8_v6/radio/: agc.h  cw_keyer.c  trx.c  vfo.h
lb7ug_ft8/lb7ug_ft8_v6/ui/: terminal.c
lb7ug_ft8/lb7ug_ft8_v6/usb/: usb_descriptors.h
lb7ug_ft8/radio/: trx.h  vfo.c
lb7ug_ft8/ui/: menu.h  terminal.h
lb7ug_ft8/usb/: uac2_app.c  usb_descriptors.c
lb7ug_ft8_v3/: main.c  ws2812.pio
lb7ug_ft8_v3/hal/: adc_audio.c  adc_audio.h  si5351.c  si5351.h
lb7ug_ft8_v3/radio/: modes.h
lb7ug_ft8_v3/stages/: stage1_blink_i2c.c  stage2_oled.c
lb7ug_ft8_v3/ui/: terminal.c
lb7ug_ft8_v3/usb/: uac2_app.c
